--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -16,7 +16,7 @@ env:
 # It's configured to run on the latest available version of Ubuntu.
 jobs:
   build-and-push-image:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
       contents: read
@@ -47,17 +47,6 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-      # This step determines the platforms for which the image will be built.
-      # If the tag name contains "-alpha-", "-beta-" or "-rc-", the image is only built for the `linux/amd64` platform.
-      # If the tag name does not contain any of the mentioned strings, the image is built for both the `linux/amd64` and `linux/arm64` platforms.
-      - name: Determine platforms
-        id: platforms
-        run: |
-          if [[ "${{ github.ref_name }}" == *"-alpha-"* || "${{ github.ref_name }}" == *"-beta-"* || "${{ github.ref_name }}" == *"-rc-"* ]]; then
-            echo "PLATFORMS=linux/amd64" >> $GITHUB_ENV
-          else
-            echo "PLATFORMS=linux/amd64,linux/arm64" >> $GITHUB_ENV
-          fi
       # This step uses the `docker/build-push-action` action to build the image, based on your repository's `Dockerfile`.
       # If the build succeeds, it pushes the image to GitHub Packages.
       # It uses the `context` parameter to define the build's context as the set of files located in the specified path.
@@ -67,7 +56,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: ${{ env.PLATFORMS }}
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
