feat: add config variable for baseline version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,6 +54,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 spring.flyway.enabled=true
 # Add option to allow flyway to operate on databases with some preexisting schema
 # This is useful when working with managed Azure PostgreSQL databases
+spring.flyway.baselineVersion=${GOVER_DB_BASELINE_VERSION:0}
 spring.flyway.baselineOnMigrate=${GOVER_DB_BASELINE_ON_MIGRATE:false}
 
 server.error.whitelabel.enabled=false
