--- a/dev/gover.env
+++ b/dev/gover.env
@@ -21,6 +21,7 @@ GOVER_SMTP_TLS="false"
 GOVER_LOG_LEVEL="INFO"
 
 GOVER_SECRETS_KEY="not-so-secret-key-with-at-least-32-characters"
+GOVER_CAPTCHA_KEY="not-so-secret-key-with-at-least-32-characters"
 
 GOVER_CLAM_HOST="localhost"
 GOVER_CLAM_PORT="3310"
