fix: implementing the proposed changes from the code review
CU-86byw8gwv

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,7 +86,7 @@ puppetpdf.port=${GOVER_PUPPET_PDF_PORT}
 secrets.key=${GOVER_SECRETS_KEY}
 
 # Set the encryption key for captcha challenges
-captcha.key=${GOVER_CAPTCHA_KEY:}
+captcha.key=${GOVER_CAPTCHA_KEY}
 
 # Set basic properties for the gover business case
 gover.goverHostname=${GOVER_HOSTNAME}
