--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -61,7 +61,7 @@ puppetpdf.port=${GOVER_PUPPET_PDF_PORT}
 
 secrets.key=${GOVER_SECRETS_KEY}
 
-captcha.key=${GOVER_CAPTCHA_KEY:}
+captcha.key=${GOVER_CAPTCHA_KEY}
 
 gover.fromMail=${GOVER_FROM_MAIL}
 gover.reportMail=${GOVER_REPORT_MAIL}
